# versionah

./: .gitignore  .projections.json  .travis.yml  CONTRIBUTING.rst  MANIFEST.in  NEWS.rst  README.rst  _version.py  nose2.cfg  setup.cfg  setup.py  tox.ini  versionah.py
.github/: CONTRIBUTING.rst  ISSUE_TEMPLATE.rst
doc/: Makefile  alternatives.rst  appendix.rst  background.rst  conf.py  faq.rst  getting_started.rst  index.rst  release.rst  templates.rst  upgrading.rst  usage.rst  versionah.1.rst  wordlist.txt
doc/api/: Version.rst  commandline.rst  filters.rst  index.rst  models.rst  utils.rst  vcs.rst
extra/: _versionah  doap.rdf  docrunner.py  requirements-base.txt  requirements-colour.txt  requirements-doc.txt  requirements-py31.txt  requirements-py32.txt  requirements-test.txt  requirements.txt
templates/: c.jinja  text.jinja
tests/: __init__.py  cmp.py  cmp_test.py  errors.py  errors_test.py  reprs.py  reprs_test.py  test_bump.py  test_cmdline.py  test_cmp.py  test_comparison.py  test_date.py  test_display.py  test_errors.py  test_foreign_comparison.py  test_impl.py  test_issues.py  test_name.py  test_output_validity.py  test_python_compat.py  test_read.py  test_reprs.py  test_shtool_export.py  test_shtool_import.py  test_two_four.py  test_type_guessing.py  test_validity.py  test_version.py  test_write.py  utils.py  version.py  version_test.py
tests/data/: test_a  test_b  test_c
tests/data/shtool/: test.c  test.m4  test.perl  test.python  test.txt
tests/features/: bump.feature  comparison.feature  date.feature  display.feature  environment.py  foreign_comparison.feature  name.feature  output_validity.feature  python_compat.feature  read.feature  shtool_import.feature  steps.py  two_four.feature  type_guessing.feature  validity.feature  write.feature
tests/features/step_definitions/: bump.py  comparison.py  date.py  display.py  foreign_comparison.py  general.py  output_validity.py  python_compat.py  type_guessing.py  util.py  validity.py
tests/features/steps/: bump.py  comparison.py  date.py  display.py  foreign_comparison.py  general.py  name.py  output_validity.py  python_compat.py  type_guessing.py  validity.py
versionah/: __init__.py  _version.py  cmdline.py  i18n.py  models.py  utils.py  vcs.py
versionah/locale/: versionah.pot
versionah/templates/: c.jinja  go.jinja  h.jinja  json.jinja  lua.jinja  m4.jinja  moon.jinja  nim.jinja  py.jinja  python.jinja  rb.jinja  ruby.jinja  text.jinja
