[aliases]
build_dist = bdist_wheel sdist --formats=gztar,bztar,zip
build_sphinx_dev = build_sphinx --all-files --fresh-env --warning-is-error

[compile_catalog]
directory = versionah/locale
domain = versionah
statistics = true

[coverage:run]
branch = True
omit =
    versionah/templates/*
    versionah/__init__.py
    versionah/_version.py

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover

    if __name__ == .__main__.:
fail_under = 100
precision = 2
skip_covered = True

[extract_messages]
msgid-bugs-address = https://github.com/JNRowe/versionah/issues
output-file = versionah/locale/versionah.pot

[init_catalog]
domain = versionah
input-file = versionah/locale/versionah.pot
output-dir = versionah/locale

[metadata]
name = versionah
author = James Rowe
author_email = jnrowe@gmail.com
description = Simple version specification management
keywords = versioning admin packaging
python_requires = >=3.5
packages = versionah
include_package_data = True
package_data =
    {
        '': ['versionah/locale/*/LC_MESSAGES/*.mo',
        'versionah/templates/*.jinja', ],
    }
entry_points =
    {'console_scripts': ['versionah = versionah.cmdline:cli', ]}
license = GPL-3
url = https://github.com/JNRowe/versionah
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved
    License :: OSI Approved :: GNU General Public License (GPL)
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Topic :: Documentation
    Topic :: Software Development
    Topic :: Software Development :: Build Tools
    Topic :: Software Development :: Code Generators
    Topic :: Software Development :: Quality Assurance
    Topic :: Software Development :: Version Control
    Topic :: System
    Topic :: System :: Software Distribution
    Topic :: Utilities

[pycodestyle]
select = E, W

[pydocstyle]
select = D203,D212,D404

[tool:pytest]
addopts =
    --cov versionah --cov-report term-missing --no-cov-on-fail
    --durations=5
    --strict
markers =
    requires_exec: Mark test as a requiring subprocess support.
    requires_read: Mark test as a requiring filesystem read access.
    requires_write: Mark test as a requiring filesystem write access.
minversion = 3.2

[update_catalog]
domain = versionah
input-file = versionah/locale/versionah.pot
output-dir = versionah/locale
ignore-obsolete = true
