[aliases]
build_dist = bdist_wheel sdist --formats=gztar,bztar,zip
build_sphinx_dev = build_sphinx --all-files --fresh-env --warning-is-error

[coverage:run]
branch = True
omit =
    versionah/templates/*
    versionah/__init__.py
    versionah/_version.py

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover

    if __name__ == .__main__.:
fail_under = 100
precision = 2
skip_covered = True

[flake8]
copyright-check = True
copyright-min-file-size = 1
copyright-regexp = Copyright © 20\d{2}(-20\d{2})? {2}
exclude = .git,build,maybe,rdial/_version.py
ignore = P101
max-complexity = 6
select = C,E,F,W,B,B901,B902,B903,B950

[metadata]
name = versionah
version = attr: versionah._version.dotted
author = James Rowe
author_email = jnrowe@gmail.com
description = Simple version specification management
long_description = file: README.rst
keywords = versioning, admin, packaging
license = GPL-3
url = https://github.com/JNRowe/versionah
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved
    License :: OSI Approved :: GNU General Public License (GPL)
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Documentation
    Topic :: Software Development
    Topic :: Software Development :: Build Tools
    Topic :: Software Development :: Code Generators
    Topic :: Software Development :: Quality Assurance
    Topic :: Software Development :: Version Control
    Topic :: System
    Topic :: System :: Software Distribution
    Topic :: Utilities
python_requires = >=3.5
project_urls =
    Contributors = https://github.com/JNRowe/versionah/contributors/
    Documentation = https://versionah.readthedocs.io/
    Git repository = https://github.com/JNRowe/versionah/
    Issue tracker = https://github.com/JNRowe/versionah/issues/
setup_requires = setuptools>=40.0.0

[options]
include_package_data = True
packages = versionah
zip_safe = True

[options.entry_points]
console_scripts =
    versionah = versionah.cmdline:cli

[options.package_data]
* = versionah/templates/*.jinja

[pycodestyle]
select = E, W

[pydocstyle]
select = D203,D212,D404

[tool:pytest]
addopts =
    --cov versionah --cov-report term-missing --no-cov-on-fail
    --durations=5
    --strict
markers =
    requires_exec: Mark test as a requiring subprocess support.
    requires_read: Mark test as a requiring filesystem read access.
    requires_write: Mark test as a requiring filesystem write access.
minversion = 3.2
